# dbms-nosql

./: .gitignore  LICENSE  README.md
src/: .env  config.py  main.py  pyproject.toml
src/api/: __init__.py
src/api/dependencies/: __init__.py  auth.py  database.py  templates.py
src/api/middleware/: __init__.py  auth.py
src/api/routes/: __init__.py  auth.py  shop.py  templates.py
src/models/: __init__.py  address.py  order.py  product.py  product_category.py  review.py  user.py
src/static/css/: main.js  style.css
src/static/css/pages/: error.css
src/static/js/: main.js
src/static/js/pages/: admin.js  cart.js  login.js  product.js  register.js  shop.js
src/templates/: admin.html  base.html  cart.html  error.html  index.html  login.htm  login.html  product.html  register.html  shop.html
syntheticdata/: index.js  package.json  pnpm-lock.yaml
