[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beanie>=2.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "orjson>=3.11.7",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = []
